// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tokensToCss > emits the dark theme variables 1`] = `
":root[data-theme="dark"] {
  color-scheme: dark;
  --color-bg: #09090B;
  --color-surface: #111113;
  --color-surface-2: #18181B;
  --color-border: #26262B;
  --color-border-strong: #6A6A74;
  --color-text: #EDEDEF;
  --color-text-muted: #94949E;
  --color-text-subtle: #81818B;
  --color-accent: #8B93FF;
  --color-accent-hover: #A5ABFF;
  --color-accent-soft: #1C1D33;
  --color-on-accent: #09090B;
  --color-success: #4ADE80;
  --color-warning: #FBBF24;
  --color-danger: #F87171;
  --color-danger-hover: #FCA5A5;
  --color-info: #60A5FA;
  --color-on-danger: #09090B;
  --color-inverse-surface: #EDEDEF;
  --color-inverse-hover: #D4D4D8;
  --color-on-inverse: #09090B;
  --color-icon-social: #7F7F81;
  --color-brand-linkedin-mark: #FFFFFF;
  --color-level-high-fg: #F87171;
  --color-level-high-bg: #2A1414;
  --color-level-medium-fg: #FBBF24;
  --color-level-medium-bg: #2A2110;
  --color-level-low-fg: #4ADE80;
  --color-level-low-bg: #10261A;
  --color-scale-1: #8A8A94;
  --color-scale-2: #60A5FA;
  --color-scale-3: #FACC15;
  --color-scale-4: #FB923C;
  --color-scale-5: #F87171;
  --color-overlay: rgba(0, 0, 0, 0.7);
  --elev-1: 0 1px 2px rgba(0, 0, 0, 0.4);
  --elev-2: 0 4px 16px rgba(0, 0, 0, 0.4);
  --elev-3: 0 16px 48px rgba(0, 0, 0, 0.6);
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 16px;
  --space-4: 24px;
  --space-5: 32px;
  --space-6: 48px;
  --space-7: 64px;
  --space-2h: 12px;
  --size-compact: 28px;
  --size-default: 32px;
  --size-large: 40px;
  --size-row: 44px;
  --icon-sm: 16px;
  --icon-md: 20px;
  --icon-lg: 32px;
  --radius-xs: 4px;
  --radius-sm: 6px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --radius-round: 999px;
  --line-thin: 1px;
  --line-thick: 2px;
  --font-sans: 'Geist Variable', system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
  --font-mono: 'Geist Mono Variable', ui-monospace, 'Cascadia Mono', Consolas, monospace;
  --font-pixel: 'Geist Pixel', 'Geist Mono Variable', ui-monospace, monospace;
  --text-micro-size: 11px;
  --text-micro-line: 16px;
  --text-caption-size: 12px;
  --text-caption-line: 16px;
  --text-table-size: 13px;
  --text-table-line: 20px;
  --text-body-size: 15px;
  --text-body-line: 24px;
  --text-h3-size: 17px;
  --text-h3-line: 24px;
  --text-h2-size: 22px;
  --text-h2-line: 28px;
  --text-h1-size: 36px;
  --text-h1-line: 40px;
  --tracking-micro: 0.08em;
  --tracking-tight: -0.02em;
  --weight-regular: 400;
  --weight-medium: 500;
  --weight-semibold: 600;
  --dur-fast: 120ms;
  --dur-base: 160ms;
  --dur-slow: 240ms;
  --dur-spin: 800ms;
  --dur-fade-base: 160ms;
  --dur-fade-slow: 240ms;
  --ease-out: cubic-bezier(0.2, 0.9, 0.3, 1);
  --ease-in: cubic-bezier(0.4, 0, 1, 1);
  --ease-standard: cubic-bezier(0.2, 0, 0, 1);
  --motion-shift: 4px;
  --motion-scale: 0.98;
  --z-popover: 20;
  --z-toast: 30;
  --z-dialog: 40;
  --measure-tooltip: 280px;
  --measure-popover: 360px;
  --measure-toast: 400px;
  --measure-dialog: 520px;
  --measure-drawer: 440px;
  --measure-narrow: 640px;
  --measure-page: 880px;
  --measure-wide: 1120px;
}"
`;

exports[`tokensToCss > emits the light theme variables 1`] = `
":root[data-theme="light"] {
  color-scheme: light;
  --color-bg: #FFFFFF;
  --color-surface: #FAFAFA;
  --color-surface-2: #F4F4F5;
  --color-border: #E4E4E7;
  --color-border-strong: #8A8A93;
  --color-text: #18181B;
  --color-text-muted: #52525B;
  --color-text-subtle: #67676F;
  --color-accent: #4F46E5;
  --color-accent-hover: #4338CA;
  --color-accent-soft: #EEF0FF;
  --color-on-accent: #FFFFFF;
  --color-success: #15803D;
  --color-warning: #A15C07;
  --color-danger: #B91C1C;
  --color-danger-hover: #991B1B;
  --color-info: #1D4ED8;
  --color-on-danger: #FFFFFF;
  --color-inverse-surface: #18181B;
  --color-inverse-hover: #3F3F46;
  --color-on-inverse: #FAFAFA;
  --color-icon-social: #7F7F81;
  --color-brand-linkedin-mark: #000000;
  --color-level-high-fg: #B91C1C;
  --color-level-high-bg: #FEF2F2;
  --color-level-medium-fg: #A15C07;
  --color-level-medium-bg: #FFFBEB;
  --color-level-low-fg: #15803D;
  --color-level-low-bg: #F0FDF4;
  --color-scale-1: #67676F;
  --color-scale-2: #2563EB;
  --color-scale-3: #975A06;
  --color-scale-4: #C2410C;
  --color-scale-5: #B91C1C;
  --color-overlay: rgba(9, 9, 11, 0.4);
  --elev-1: 0 1px 2px rgba(9, 9, 11, 0.04);
  --elev-2: 0 4px 16px rgba(9, 9, 11, 0.08);
  --elev-3: 0 16px 48px rgba(9, 9, 11, 0.14);
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 16px;
  --space-4: 24px;
  --space-5: 32px;
  --space-6: 48px;
  --space-7: 64px;
  --space-2h: 12px;
  --size-compact: 28px;
  --size-default: 32px;
  --size-large: 40px;
  --size-row: 44px;
  --icon-sm: 16px;
  --icon-md: 20px;
  --icon-lg: 32px;
  --radius-xs: 4px;
  --radius-sm: 6px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --radius-round: 999px;
  --line-thin: 1px;
  --line-thick: 2px;
  --font-sans: 'Geist Variable', system-ui, -apple-system, 'Segoe UI', Roboto, sans-serif;
  --font-mono: 'Geist Mono Variable', ui-monospace, 'Cascadia Mono', Consolas, monospace;
  --font-pixel: 'Geist Pixel', 'Geist Mono Variable', ui-monospace, monospace;
  --text-micro-size: 11px;
  --text-micro-line: 16px;
  --text-caption-size: 12px;
  --text-caption-line: 16px;
  --text-table-size: 13px;
  --text-table-line: 20px;
  --text-body-size: 15px;
  --text-body-line: 24px;
  --text-h3-size: 17px;
  --text-h3-line: 24px;
  --text-h2-size: 22px;
  --text-h2-line: 28px;
  --text-h1-size: 36px;
  --text-h1-line: 40px;
  --tracking-micro: 0.08em;
  --tracking-tight: -0.02em;
  --weight-regular: 400;
  --weight-medium: 500;
  --weight-semibold: 600;
  --dur-fast: 120ms;
  --dur-base: 160ms;
  --dur-slow: 240ms;
  --dur-spin: 800ms;
  --dur-fade-base: 160ms;
  --dur-fade-slow: 240ms;
  --ease-out: cubic-bezier(0.2, 0.9, 0.3, 1);
  --ease-in: cubic-bezier(0.4, 0, 1, 1);
  --ease-standard: cubic-bezier(0.2, 0, 0, 1);
  --motion-shift: 4px;
  --motion-scale: 0.98;
  --z-popover: 20;
  --z-toast: 30;
  --z-dialog: 40;
  --measure-tooltip: 280px;
  --measure-popover: 360px;
  --measure-toast: 400px;
  --measure-dialog: 520px;
  --measure-drawer: 440px;
  --measure-narrow: 640px;
  --measure-page: 880px;
  --measure-wide: 1120px;
}"
`;
